--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -7,6 +7,11 @@
         padding: 0 2%;
     }    
     
+    .studypacket-text-box {
+        width: 100%;
+        padding: 0 2%;
+    }
+    
     .row {
         padding: 0 2%;
     }
@@ -48,6 +53,10 @@
     
     section {
         padding: 30px 0;
+    }
+    
+    .studypacket-text-box {
+        padding: 0 4%;
     }
     
     .header-text-box {
@@ -135,6 +144,11 @@
         width: 70%;
         padding: 0 2%;
     }    
+    
+    .studypacket-text-box {
+        width: 70%;
+        padding: 0 2%;
+    }
     
     h1 {
         font-size: 200%;
