--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,8 +1,4 @@
 /* ============================================== */
-/* Green Color:2ecc71 */
-/* ============================================== */
-
-/* ============================================== */
 /* BASIC SETUP */
 /* ============================================== */
 
@@ -186,7 +182,7 @@ input[type=submit] {
 .btn-ghost:link,
 .btn-ghost:visited {
     border: 1px solid #2ecc71;
-    margin-top: 15px;
+    margin-top: 0px;
 }
 
 .btn:hover,
@@ -469,9 +465,38 @@ footer p {
 .studypacket-text-box {
     position: absolute;
     width: 1140px;
-    top: 12%;
+    top: 15%;
     left: 50%;
+    margin-top: 10px;
+    padding-bottom: 0px;
     transform: translate(-50%, -50%);
+}
+
+.studypacket-nav {
+    float: right;
+    list-style: none;
+    margin-top: 20px;
+}
+
+.studypacket-nav li {
+    display: inline-block;
+    margin-left: 35px;
+}
+
+.studypacket-nav li a:link,
+.studypacket-nav li a:visited {
+    padding: 8px 0;
+    color: #fff;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 90%;
+    border-bottom: 2px solid transparent;
+    transition: border-bottom 0.25s;
+}
+
+.studypacket-nav li a:hover,
+.studypacket-nav li a:active {
+    border-bottom: 2px solid #e74c3c;
 }
 
 /* ============================================== */
