--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -99,7 +99,10 @@
         margin-top: 10px;
     }
     
-    .section-subjects h4:after {
+    .math h4:after,
+    .chem h4:after,
+    .physics h4:after,
+    .bio h4:after {
         display: none;
     }
 }
@@ -167,7 +170,10 @@
         margin-top: 10px;
     }
     
-    .section-subjects h4:after {
+    .math h4:after,
+    .chem h4:after,
+    .physics h4:after,
+    .bio h4:after {
         display: none;
     }
 }
@@ -211,7 +217,10 @@
         margin-top: 10px;
     }
     
-    .section-subjects h4:after {
+    .math h4:after,
+    .chem h4:after,
+    .physics h4:after,
+    .bio h4:after {
         display: none;
     }
 }
