--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -32,7 +32,7 @@
     }
     
     .logo {
-        height: 110px;
+        height: 90px;
         width: auto;
     }
     
@@ -99,10 +99,7 @@
         margin-top: 10px;
     }
     
-    .math h4:after,
-    .chem h4:after,
-    .physics h4:after,
-    .bio h4:after {
+    .section-subjects h4:after {
         display: none;
     }
 }
@@ -170,10 +167,7 @@
         margin-top: 10px;
     }
     
-    .math h4:after,
-    .chem h4:after,
-    .physics h4:after,
-    .bio h4:after {
+    .section-subjects h4:after {
         display: none;
     }
 }
@@ -217,10 +211,7 @@
         margin-top: 10px;
     }
     
-    .math h4:after,
-    .chem h4:after,
-    .physics h4:after,
-    .bio h4:after {
+    .section-subjects h4:after {
         display: none;
     }
 }
